--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dom_karkas",
   "version": "1.0.0",
   "description": "dom_karkas landing",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,33 +15,19 @@
     "url": "https://github.com/silaevd/dom_karkas/issues"
   },
   "homepage": "https://github.com/silaevd/dom_karkas#readme",
-  "dependencies": {
-    "browser-sync": "^2.26.13",
-    "del": "^5.1.0",
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.26.14",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-clone": "^2.0.1",
-    "gulp-file-include": "^2.2.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-sass": "^3.2.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
-  },
-  "browserslist": [
-    "> 1%",
-    "ie >= 8",
-    "edge >= 15",
-    "ie_mob >= 10",
-    "ff >= 45",
-    "chrome >= 45",
-    "safari >= 6",
-    "opera >= 23",
-    "ios >= 6",
-    "android >= 4",
-    "bb >= 10"
-  ],
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-webp": "^4.0.1"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-less": "^4.0.1",
+    "gulp-newer": "^1.4.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify-es": "^2.0.0",
+    "jquery": "^3.6.0"
   }
 }
