--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "url": "https://github.com/silaevd/dom_karkas/issues"
   },
   "homepage": "https://github.com/silaevd/dom_karkas#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vide": "^0.5.1"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
