--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/silaevd/dom_karkas#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "vide": "^0.5.1"
   },
   "devDependencies": {
