--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "unitegallery": "^1.7.28"
   }
 }
