--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.6.0",
+    "magnific-popup": "^1.1.0",
     "smooth-scroll": "^16.1.3",
     "unitegallery": "^1.7.28"
   }
